--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,12 @@ leptos = { version = "0.7", features = ["csr"] }
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
 js-sys = "0.3"
+web-sys = "0.3"
 serde = { version = "1", features = ["derive"] }
+serde_json = "1.0"
 serde-wasm-bindgen = "0.6"
 console_error_panic_hook = "0.1.7"
+gloo-timers = { version = "0.3", features = ["futures"] }
 
 [workspace]
 members = ["src-tauri"]
